# quant-stuff

HFT_backtest/: CMakeLists.txt  README.md  build.sh  s3.cpp
HFT_backtest/2020-05-26/: BTCUSDT_1h.csv  b.txt  symbols.json  trade.txt
HFT_backtest/configuration/: alpha_configuration_fitter_run_test_strategy  configuration_run_daytona  configuration_run_riesling_original  configuration_run_test_strategy
HFT_backtest/src/: CMakeLists.txt
HFT_backtest/src/application/: .clang-format  .gitignore  CMakeLists.txt  Linter.sh
HFT_backtest/src/application/GetBinanceKline/: CMakeLists.txt  main.cpp
HFT_backtest/src/application/GetBinanceTradeData/: CMakeLists.txt  main.cpp
HFT_backtest/src/application/RunStrategy/: CMakeLists.txt  main.cpp
HFT_backtest/src/counter/: AdjustedWeightedTickIntervalCounter.cpp  AdjustedWeightedTickIntervalCounter.h  CMakeLists.txt  ClockTimeIntervalCounter.cpp  ClockTimeIntervalCounter.h  CounterFactory.cpp  CounterFactory.h  EventIntervalCounter.cpp  EventIntervalCounter.h  Linter.sh  MultiCounterManager.cpp  MultiCounterManager.h  TradeMoneyIntervalCounter.cpp  TradeMoneyIntervalCounter.h  TradeThroughIntervalCounter.cpp  TradeThroughIntervalCounter.h  TrueRangeIntervalCounter.cpp  TrueRangeIntervalCounter.h  VolatilityIntervalCounter.cpp  VolatilityIntervalCounter.h  WeightedTickIntervalCounter.cpp  WeightedTickIntervalCounter.h
HFT_backtest/src/infrastructure/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Linter.sh  README.md
HFT_backtest/src/infrastructure/base/: Book.cpp  Book.h  BookDataListener.h  BookDataSource.h  CMakeLists.txt  CommandListener.cpp  CommandListener.h  CommandRelay.cpp  CommandRelay.h  CommandSource.cpp  CommandSource.h  CounterListener.h  Delay.h  MarketDataListener.h  MarketDataProvider.cpp  MarketDataProvider.h  MulticastListener.h  Ohlcv.h  OrderManager.h  OrderReportMessage.h  OrderReportSource.h  PreMarket.h  PreMarketListener.h  RingBufferListener.h  TaifexOrderManagerBase.h  TaifexOrderReportListener.h  TimerListener.cpp  TimerListener.h  TimerSource.cpp  TimerSource.h
HFT_backtest/src/infrastructure/common/: CMakeLists.txt
HFT_backtest/src/infrastructure/common/benchmark/: benchmark.h
HFT_backtest/src/infrastructure/common/configuration/: GlobalConfiguration.cpp  GlobalConfiguration.h
HFT_backtest/src/infrastructure/common/datetime/: Date.cpp  Date.h  Duration.cpp  Duration.h  Timestamp.cpp  Timestamp.h
HFT_backtest/src/infrastructure/common/file/: CryptoMarketDataMessageFileReader.cpp  CryptoMarketDataMessageFileReader.h  DelimitedFileReader.cpp  DelimitedFileReader.h  MarketDataMessageFileReader.cpp  MarketDataMessageFileReader.h  TWSEDataFileReader.cpp  TWSEDataFileReader.h
HFT_backtest/src/infrastructure/common/json/: Json.hpp
HFT_backtest/src/infrastructure/common/math/: Activation.h  Constant.h  Function.h  Math.h
HFT_backtest/src/infrastructure/common/memory/: BoostPool.h  SimpleMemoryPool.cpp  SimpleMemoryPool.h
HFT_backtest/src/infrastructure/common/message/: BookDataMessage.cpp  BookDataMessage.h  MarketDataMessage.cpp  MarketDataMessage.h  TAIFEX.h  TWSE.h  TWSEDataFileFormat.h
HFT_backtest/src/infrastructure/common/nats/: NATSConnection.cpp  NATSConnection.h
HFT_backtest/src/infrastructure/common/numeric/: Numeric.h  SmoothNumber.h
HFT_backtest/src/infrastructure/common/position/: Position.cpp  Position.h
HFT_backtest/src/infrastructure/common/protobuf/: MarketDataMessage.pb.cpp  MarketDataMessage.pb.h  MarketDataMessage.proto  MessageFormat.pb.cpp  MessageFormat.pb.h  MessageFormat.proto  build.sh  protoc
HFT_backtest/src/infrastructure/common/side/: Side.h
HFT_backtest/src/infrastructure/common/symbol/: Symbol.cpp  Symbol.h  SymbolInfo.h
HFT_backtest/src/infrastructure/common/typedef/: Typedefs.cpp  Typedefs.h
HFT_backtest/src/infrastructure/common/util/: Branch.h  EnumToString.cpp  EnumToString.h  FileLock.cpp  FileLock.h  Helper.h  Logger.h  LoggerFormat.cpp  LoggerFormat.h  MD5.cpp  MD5.h  Macro.h  Net.cpp  Net.h  Order.cpp  Order.h  PacketLog.h  ParserDumper.cpp  ParserDumper.h  Sequence.cpp  Sequence.h  String.cpp  String.h  ToString.h  UnPackBCD.h  gzstream.cpp  gzstream.h
HFT_backtest/src/infrastructure/common/websocketpp/: CMakeLists.txt
HFT_backtest/src/infrastructure/common/wrapper/: Wrapper.h
HFT_backtest/src/infrastructure/platform/: CMakeLists.txt
HFT_backtest/src/infrastructure/platform/book/: LevelFactory.cpp  LevelFactory.h  MarketByOrderBook.cpp  MarketByOrderBook.h  MarketByPriceBook.cpp  MarketByPriceBook.h  OrderFactory.cpp  OrderFactory.h  TWSEFileBook.cpp  TWSEFileBook.h
HFT_backtest/src/infrastructure/platform/checker/: MarketDataChecker.cpp  MarketDataChecker.h
HFT_backtest/src/infrastructure/platform/color/: Color.h
HFT_backtest/src/infrastructure/platform/counter/: AddIntervalCounter.cpp  AddIntervalCounter.h  AxisIntervalCounter.cpp  AxisIntervalCounter.h  Counter.cpp  Counter.h  DeleteIntervalCounter.cpp  DeleteIntervalCounter.h  DoubleTickIntervalCounter.cpp  DoubleTickIntervalCounter.h  (+14 more)
HFT_backtest/src/risk/: .clang-format  CMakeLists.txt  IdiotProof.cpp  IdiotProof.h  RiskController.cpp  RiskController.h  RiskStatus.cpp  RiskStatus.h
HFT_backtest/src/s3/: CMakeCache.txt  Makefile  cmake_install.cmake  s3
HFT_backtest/src/status/: CMakeLists.txt  Version.cpp  Version.h.in
HFT_backtest/src/strategy/: CMakeLists.txt  FeedPriceChecker.cpp  FeedPriceChecker.h  GenericFactory.h  Main.cpp  Main.h  MarkoutTrackRecord.cpp  MarkoutTrackRecord.h  Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  TurnOverPeriod.cpp  TurnOverPeriod.h  Utility.h
HFT_backtest/src/strategy/CrossExchangeArbitrageStrategy/: CrossExchangeArbitrageStrategy.cpp  CrossExchangeArbitrageStrategy.h
HFT_backtest/src/strategy/TestMakerStrategy/: TestMakerStrategy.cpp  TestMakerStrategy.h
footprint-chart/crates/pluto/: Cargo.toml
footprint-chart/crates/pluto/examples/: pluto-event-recorder.rs
footprint-chart/crates/pluto/src/: lib.rs
footprint-chart/footprint/: Cargo.toml
footprint-chart/footprint/examples/: server.rs
(+452 files in other folders)
