[package]
name = "footprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.82"
binance-rs-async = "1.3.3"
dotenv = "0.15.0"
chrono = "0.4.38"
uuid = "1.8.0"
influxdb = { version = "0.7.2", features = ["derive", "use-serde"] }
serde = "1.0.198"
toml = "0.8.12"
meansd = "2.1.0"
rust_decimal = "1.35.0"
serde_json = "1.0"
rand = "0.8.5"
indicatif = "0.17.8"
warp = "0.3.7"
futures = "0.3.30"

# Internal dependencies
logger = { path = "../crates/logger" }
pluto = { path = "../crates/pluto" }
